2008-06-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* fnames.h, mapedit/studio.cc, server/*: Consolidating name of socket file
	  in Exult/ES communication to be "<GAMEDAT>/exultserver" on all OSes.
	* server/servewin32.cc: FILE_SHARE_DELETE flag prevent CreateFile from
	  working in Win9x, preventing ES from working there.
	* actors.cc: Making NPCs quit combat/attacking a target after dying.

2008-06-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing handling of dead bodies, including flags.

2008-06-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc: Fixing segfaults on exit.
	* actors.cc: Fixed checks that were failing due to operator precedence.
	* effects.cc: Fixed crash on using Death Vortex/Energy Mist. Fixed Death
	  Vortex and Energy Mist.
	* monsters.cc: Fixed carpet-filled monster inventory bug.
	* shapes/shapeinf.cc: Correctly initializing monster food value.
	* Fixing reagents mismatches between Exult and original games.
	* Fixed ammo counting bug causing some ranged weapons to not be found.
	  Improved attacking when switching dead weapon.

2008-06-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	BIG Commit (TM). Quite likely, there are a lot of bugs.
	* Version bump to 1.04.05cvs due to massive internal changes and also due to
	  the fact that pre-1.04.05cvs animation data is INCOMPATIBLE with CVS head
	  and WILL NOT WORK. Also, pre-1.04.05cvs versions of Exult WILL CHOKE and
	  most likely die with this new data.
	* Warning: previous versions of Exult Studio lost information when it saved
	  weapons.dat, monsters.dat and ammo.dat data files. There is a command to
	  fix this by reloading the static data; this will only affect shapes that
	  had this data in the original: the Death Scythe would be reset, but if you
	  gave weapon data to a door, it would not be reset.
	* msvcstuff/*: Added new files to projects.
	* Makefile.mingw: 'turbo', configurable makefile. Command-line parameters