@@ -1,4 +1,7 @@
-2008-06-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
+2008-06-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* actors.cc: removed some using std::'s to improve gcc 4.3 support
+
+2008-06-14	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* fnames.h, mapedit/studio.cc, server/*: Consolidating name of socket file
 	  in Exult/ES communication to be "<GAMEDAT>/exultserver" on all OSes.
 	* server/servewin32.cc: FILE_SHARE_DELETE flag prevent CreateFile from
